AntlrParser.js
// Generated from Antlr.g4 by ANTLR 4.9.2
// jshint ignore: start
import antlr4 from 'antlr4';
import AntlrListener from './AntlrListener.js';



const atn = new antlr4.atn.ATNDeserializer().deserialize(serializedATN);

const decisionsToDFA = atn.decisionToState.map( (ds, index) => new antlr4.dfa.DFA(ds, index) );

const sharedContextCache = new antlr4.PredictionContextCache();

export default class AntlrParser extends antlr4.Parser {

    static grammarFileName = "Antlr.g4";
    static literalNames = [ null, null, "'*'", "'/'", "'+'", "'-'", null, 
                            null, null, null, null, "'='", "';'", "'('", 
                            "')'", "'{'", "'}'", null, "'For'", null, "'While'", 
                            "'If'", "'Else'", "'Function'", "','", "'Return'", 
                            "'Then'" ];
    static symbolicNames = [ null, "NUM", "MULTIPLICATION", "DIV", "PLUS", 
                             "MINUS", "LOGIC", "COMPARE", "UNARY_OPERATOR", 
                             "IDENT", "VAR", "ASSIGN", "SEPARATOR", "LPAREN", 
                             "RPAREN", "LCURLY", "RCURLY", "WS", "FOR", 
                             "NEWLINE", "WHILE", "IF", "ELSE", "FUNCTION", 
                             "COMMA", "RETURN", "THEN" ];
    static ruleNames = [ "operation", "value", "test", "line", "cycle", 
                         "condition", "variable_declaration", "variable_def", 
                         "variable_change_expression", "expression", "primitive_math_operation", 
                         "primitive_math_operation_right", "logic_expression", 
                         "single_logic_exp", "logic_exp_right", "for_head", 
                         "for_cycle", "while_head", "while_cycle", "if_condition", 
                         "else_condition", "fn" ];

    constructor(input) {
        super(input);
        this._interp = new antlr4.atn.ParserATNSimulator(this, atn, decisionsToDFA, sharedContextCache);
        this.ruleNames = AntlrParser.ruleNames;
        this.literalNames = AntlrParser.literalNames;
        this.symbolicNames = AntlrParser.symbolicNames;
    }

    get atn() {
        return atn;
    }

    sempred(localctx, ruleIndex, predIndex) {
    	switch(ruleIndex) {
    	case 9:
    	    		return this.expression_sempred(localctx, predIndex);
        default:
            throw "No predicate with index:" + ruleIndex;
       }
    }

    expression_sempred(localctx, predIndex) {
    	switch(predIndex) {
    		case 0:
    			return this.precpred(this._ctx, 5);
    		default:
    			throw "No predicate with index:" + predIndex;
    	}
    };




	operation() {
	    let localctx = new OperationContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 0, AntlrParser.RULE_operation);
	    var _la = 0; // Token type
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 44;
	        _la = this._input.LA(1);
	        if(!((((_la) & ~0x1f) == 0 && ((1 << _la) & ((1 << AntlrParser.MULTIPLICATION) | (1 << AntlrParser.DIV) | (1 << AntlrParser.PLUS) | (1 << AntlrParser.MINUS) | (1 << AntlrParser.COMPARE) | (1 << AntlrParser.ASSIGN))) !== 0))) {
	        this._errHandler.recoverInline(this);
	        }
	        else {
	        	this._errHandler.reportMatch(this);
	            this.consume();
	        }
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	value() {
	    let localctx = new ValueContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 2, AntlrParser.RULE_value);
	    var _la = 0; // Token type
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 46;
	        _la = this._input.LA(1);
	        if(!(_la===AntlrParser.NUM || _la===AntlrParser.IDENT)) {
	        this._errHandler.recoverInline(this);
	        }
	        else {
	        	this._errHandler.reportMatch(this);
	            this.consume();
	        }
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	test() {
	    let localctx = new TestContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 4, AntlrParser.RULE_test);
	    var _la = 0; // Token type
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 51;
	        this._errHandler.sync(this);
	        _la = this._input.LA(1);
	        while((((_la) & ~0x1f) == 0 && ((1 << _la) & ((1 << AntlrParser.NUM) | (1 << AntlrParser.IDENT) | (1 << AntlrParser.VAR) | (1 << AntlrParser.LPAREN) | (1 << AntlrParser.FOR) | (1 << AntlrParser.WHILE) | (1 << AntlrParser.IF) | (1 << AntlrParser.FUNCTION))) !== 0)) {
	            this.state = 48;
	            this.line();
	            this.state = 53;
	            this._errHandler.sync(this);
	            _la = this._input.LA(1);
	        }
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	line() {
	    let localctx = new LineContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 6, AntlrParser.RULE_line);
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 58;
	        this._errHandler.sync(this);
	        switch(this._input.LA(1)) {
	        case AntlrParser.NUM:
	        case AntlrParser.IDENT:
	        case AntlrParser.VAR:
	        case AntlrParser.LPAREN:
	            this.state = 54;
	            this.expression(0);
	            break;
	        case AntlrParser.FOR:
	        case AntlrParser.WHILE:
	            this.state = 55;
	            this.cycle();
	            break;
	        case AntlrParser.IF:
	            this.state = 56;
	            this.condition();
	            break;
	        case AntlrParser.FUNCTION:
	            this.state = 57;
	            this.fn();
	            break;
	        default:
	            throw new antlr4.error.NoViableAltException(this);
	        }
	        this.state = 60;
	        this.match(AntlrParser.SEPARATOR);
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	cycle() {
	    let localctx = new CycleContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 8, AntlrParser.RULE_cycle);
	    try {
	        this.state = 64;
	        this._errHandler.sync(this);
	        switch(this._input.LA(1)) {
	        case AntlrParser.WHILE:
	            this.enterOuterAlt(localctx, 1);
	            this.state = 62;
	            this.while_cycle();
	            break;
	        case AntlrParser.FOR:
	            this.enterOuterAlt(localctx, 2);
	            this.state = 63;
	            this.for_cycle();
	            break;
	        default:
	            throw new antlr4.error.NoViableAltException(this);
	        }
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	condition() {
	    let localctx = new ConditionContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 10, AntlrParser.RULE_condition);
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 66;
	        this.if_condition();
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	variable_declaration() {
	    let localctx = new Variable_declarationContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 12, AntlrParser.RULE_variable_declaration);
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 68;
	        this.match(AntlrParser.VAR);
	        this.state = 69;
	        this.match(AntlrParser.IDENT);
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	variable_def() {
	    let localctx = new Variable_defContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 14, AntlrParser.RULE_variable_def);
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 71;
	        this.variable_declaration();
	        this.state = 72;
	        this.match(AntlrParser.ASSIGN);
	        this.state = 75;
	        this._errHandler.sync(this);
	        var la_ = this._interp.adaptivePredict(this._input,3,this._ctx);
	        switch(la_) {
	        case 1:
	            this.state = 73;
	            this.value();
	            break;

	        case 2:
	            this.state = 74;
	            this.expression(0);
	            break;

	        }
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	variable_change_expression() {
	    let localctx = new Variable_change_expressionContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 16, AntlrParser.RULE_variable_change_expression);
	    try {
	        this.state = 85;
	        this._errHandler.sync(this);
	        var la_ = this._interp.adaptivePredict(this._input,4,this._ctx);
	        switch(la_) {
	        case 1:
	            this.enterOuterAlt(localctx, 1);
	            this.state = 77;
	            this.match(AntlrParser.IDENT);
	            this.state = 78;
	            this.match(AntlrParser.ASSIGN);
	            this.state = 79;
	            this.match(AntlrParser.IDENT);
	            this.state = 80;
	            this.operation();
	            this.state = 81;
	            this.value();
	            break;

	        case 2:
	            this.enterOuterAlt(localctx, 2);
	            this.state = 83;
	            this.match(AntlrParser.IDENT);
	            this.state = 84;
	            this.match(AntlrParser.UNARY_OPERATOR);
	            break;

	        }
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}


	expression(_p) {
		if(_p===undefined) {
		    _p = 0;
		}
	    const _parentctx = this._ctx;
	    const _parentState = this.state;
	    let localctx = new ExpressionContext(this, this._ctx, _parentState);
	    let _prevctx = localctx;
	    const _startState = 18;
	    this.enterRecursionRule(localctx, 18, AntlrParser.RULE_expression, _p);
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 97;
	        this._errHandler.sync(this);
	        var la_ = this._interp.adaptivePredict(this._input,5,this._ctx);
	        switch(la_) {
	        case 1:
	            this.state = 88;
	            this.match(AntlrParser.LPAREN);
	            this.state = 89;
	            this.expression(0);
	            this.state = 90;
	            this.match(AntlrParser.RPAREN);
	            break;

	        case 2:
	            this.state = 92;
	            this.primitive_math_operation();
	            break;

	        case 3:
	            this.state = 93;
	            this.value();
	            break;

	        case 4:
	            this.state = 94;
	            this.logic_expression();
	            break;

	        case 5:
	            this.state = 95;
	            this.variable_def();
	            break;

	        case 6:
	            this.state = 96;
	            this.variable_declaration();
	            break;

	        }
	        this._ctx.stop = this._input.LT(-1);
	        this.state = 105;
	        this._errHandler.sync(this);
	        var _alt = this._interp.adaptivePredict(this._input,6,this._ctx)
	        while(_alt!=2 && _alt!=antlr4.atn.ATN.INVALID_ALT_NUMBER) {
	            if(_alt===1) {
	                if(this._parseListeners!==null) {
	                    this.triggerExitRuleEvent();
	                }
	                _prevctx = localctx;
	                localctx = new ExpressionContext(this, _parentctx, _parentState);
	                this.pushNewRecursionContext(localctx, _startState, AntlrParser.RULE_expression);
	                this.state = 99;
	                if (!( this.precpred(this._ctx, 5))) {
	                    throw new antlr4.error.FailedPredicateException(this, "this.precpred(this._ctx, 5)");
	                }
	                this.state = 100;
	                this.operation();
	                this.state = 101;
	                this.expression(6); 
	            }
	            this.state = 107;
	            this._errHandler.sync(this);
	            _alt = this._interp.adaptivePredict(this._input,6,this._ctx);
	        }

	    } catch( error) {
	        if(error instanceof antlr4.error.RecognitionException) {
		        localctx.exception = error;
		        this._errHandler.reportError(this, error);
		        this._errHandler.recover(this, error);
		    } else {
		    	throw error;
		    }
	    } finally {
	        this.unrollRecursionContexts(_parentctx)
	    }
	    return localctx;
	}



	primitive_math_operation() {
	    let localctx = new Primitive_math_operationContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 20, AntlrParser.RULE_primitive_math_operation);
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 108;
	        this.value();
	        this.state = 110; 
	        this._errHandler.sync(this);
	        var _alt = 1;
	        do {
	        	switch (_alt) {
	        	case 1:
	        		this.state = 109;
	        		this.primitive_math_operation_right();
	        		break;
	        	default:
	        		throw new antlr4.error.NoViableAltException(this);
	        	}
	        	this.state = 112; 
	        	this._errHandler.sync(this);
	        	_alt = this._interp.adaptivePredict(this._input,7, this._ctx);
	        } while ( _alt!=2 && _alt!=antlr4.atn.ATN.INVALID_ALT_NUMBER );
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	primitive_math_operation_right() {
	    let localctx = new Primitive_math_operation_rightContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 22, AntlrParser.RULE_primitive_math_operation_right);
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 114;
	        this.operation();
	        this.state = 122;
	        this._errHandler.sync(this);
	        switch(this._input.LA(1)) {
	        case AntlrParser.NUM:
	        case AntlrParser.IDENT:
	            this.state = 115;
	            this.value();
	            break;
	        case AntlrParser.LPAREN:
	            this.state = 116;
	            this.match(AntlrParser.LPAREN);
	            this.state = 117;
	            this.value();
	            this.state = 118;
	            this.operation();
	            this.state = 119;
	            this.value();
	            this.state = 120;
	            this.match(AntlrParser.RPAREN);
	            break;
	        default:
	            throw new antlr4.error.NoViableAltException(this);
	        }
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	logic_expression() {
	    let localctx = new Logic_expressionContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 24, AntlrParser.RULE_logic_expression);
	    try {
	        this.state = 134;
	        this._errHandler.sync(this);
	        var la_ = this._interp.adaptivePredict(this._input,11,this._ctx);
	        switch(la_) {
	        case 1:
	            this.enterOuterAlt(localctx, 1);
	            this.state = 124;
	            this.single_logic_exp();
	            break;

	        case 2:
	            this.enterOuterAlt(localctx, 2);
	            this.state = 126;
	            this._errHandler.sync(this);
	            var la_ = this._interp.adaptivePredict(this._input,9,this._ctx);
	            if(la_===1) {
	                this.state = 125;
	                this.match(AntlrParser.LPAREN);

	            }
	            this.state = 128;
	            this.single_logic_exp();
	            this.state = 129;
	            this.match(AntlrParser.LOGIC);
	            this.state = 130;
	            this.single_logic_exp();
	            this.state = 132;
	            this._errHandler.sync(this);
	            var la_ = this._interp.adaptivePredict(this._input,10,this._ctx);
	            if(la_===1) {
	                this.state = 131;
	                this.match(AntlrParser.RPAREN);

	            }
	            break;

	        }
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	single_logic_exp() {
	    let localctx = new Single_logic_expContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 26, AntlrParser.RULE_single_logic_exp);
	    var _la = 0; // Token type
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 137;
	        this._errHandler.sync(this);
	        _la = this._input.LA(1);
	        if(_la===AntlrParser.LPAREN) {
	            this.state = 136;
	            this.match(AntlrParser.LPAREN);
	        }

	        this.state = 139;
	        this.match(AntlrParser.IDENT);
	        this.state = 143;
	        this._errHandler.sync(this);
	        var _alt = this._interp.adaptivePredict(this._input,13,this._ctx)
	        while(_alt!=2 && _alt!=antlr4.atn.ATN.INVALID_ALT_NUMBER) {
	            if(_alt===1) {
	                this.state = 140;
	                this.logic_exp_right(); 
	            }
	            this.state = 145;
	            this._errHandler.sync(this);
	            _alt = this._interp.adaptivePredict(this._input,13,this._ctx);
	        }

	        this.state = 147;
	        this._errHandler.sync(this);
	        var la_ = this._interp.adaptivePredict(this._input,14,this._ctx);
	        if(la_===1) {
	            this.state = 146;
	            this.match(AntlrParser.RPAREN);

	        }
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	logic_exp_right() {
	    let localctx = new Logic_exp_rightContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 28, AntlrParser.RULE_logic_exp_right);
	    try {
	        this.state = 156;
	        this._errHandler.sync(this);
	        switch(this._input.LA(1)) {
	        case AntlrParser.LOGIC:
	            this.enterOuterAlt(localctx, 1);
	            this.state = 149;
	            this.match(AntlrParser.LOGIC);
	            this.state = 150;
	            this.value();
	            break;
	        case AntlrParser.COMPARE:
	            this.enterOuterAlt(localctx, 2);
	            this.state = 151;
	            this.match(AntlrParser.COMPARE);
	            this.state = 154;
	            this._errHandler.sync(this);
	            var la_ = this._interp.adaptivePredict(this._input,15,this._ctx);
	            switch(la_) {
	            case 1:
	                this.state = 152;
	                this.value();
	                break;

	            case 2:
	                this.state = 153;
	                this.primitive_math_operation();
	                break;

	            }
	            break;
	        default:
	            throw new antlr4.error.NoViableAltException(this);
	        }
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	for_head() {
	    let localctx = new For_headContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 30, AntlrParser.RULE_for_head);
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 158;
	        this.match(AntlrParser.FOR);
	        this.state = 159;
	        this.match(AntlrParser.LPAREN);
	        this.state = 160;
	        this.variable_def();
	        this.state = 161;
	        this.match(AntlrParser.SEPARATOR);
	        this.state = 162;
	        this.logic_expression();
	        this.state = 163;
	        this.match(AntlrParser.SEPARATOR);
	        this.state = 164;
	        this.variable_change_expression();
	        this.state = 165;
	        this.match(AntlrParser.SEPARATOR);
	        this.state = 166;
	        this.match(AntlrParser.RPAREN);
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	for_cycle() {
	    let localctx = new For_cycleContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 32, AntlrParser.RULE_for_cycle);
	    var _la = 0; // Token type
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 168;
	        this.for_head();
	        this.state = 169;
	        this.match(AntlrParser.LCURLY);
	        this.state = 171; 
	        this._errHandler.sync(this);
	        _la = this._input.LA(1);
	        do {
	            this.state = 170;
	            this.line();
	            this.state = 173; 
	            this._errHandler.sync(this);
	            _la = this._input.LA(1);
	        } while((((_la) & ~0x1f) == 0 && ((1 << _la) & ((1 << AntlrParser.NUM) | (1 << AntlrParser.IDENT) | (1 << AntlrParser.VAR) | (1 << AntlrParser.LPAREN) | (1 << AntlrParser.FOR) | (1 << AntlrParser.WHILE) | (1 << AntlrParser.IF) | (1 << AntlrParser.FUNCTION))) !== 0));
	        this.state = 175;
	        this.match(AntlrParser.RCURLY);
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	while_head() {
	    let localctx = new While_headContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 34, AntlrParser.RULE_while_head);
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 177;
	        this.match(AntlrParser.WHILE);
	        this.state = 178;
	        this.match(AntlrParser.LPAREN);
	        this.state = 179;
	        this.logic_expression();
	        this.state = 180;
	        this.match(AntlrParser.RPAREN);
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	while_cycle() {
	    let localctx = new While_cycleContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 36, AntlrParser.RULE_while_cycle);
	    var _la = 0; // Token type
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 182;
	        this.while_head();
	        this.state = 183;
	        this.match(AntlrParser.LCURLY);
	        this.state = 185; 
	        this._errHandler.sync(this);
	        _la = this._input.LA(1);
	        do {
	            this.state = 184;
	            this.line();
	            this.state = 187; 
	            this._errHandler.sync(this);
	            _la = this._input.LA(1);
	        } while((((_la) & ~0x1f) == 0 && ((1 << _la) & ((1 << AntlrParser.NUM) | (1 << AntlrParser.IDENT) | (1 << AntlrParser.VAR) | (1 << AntlrParser.LPAREN) | (1 << AntlrParser.FOR) | (1 << AntlrParser.WHILE) | (1 << AntlrParser.IF) | (1 << AntlrParser.FUNCTION))) !== 0));
	        this.state = 189;
	        this.match(AntlrParser.RCURLY);
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	if_condition() {
	    let localctx = new If_conditionContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 38, AntlrParser.RULE_if_condition);
	    var _la = 0; // Token type
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 191;
	        this.match(AntlrParser.IF);
	        this.state = 192;
	        this.match(AntlrParser.LPAREN);
	        this.state = 193;
	        this.logic_expression();
	        this.state = 194;
	        this.match(AntlrParser.RPAREN);
	        this.state = 195;
	        this.match(AntlrParser.THEN);
	        this.state = 196;
	        this.match(AntlrParser.LCURLY);
	        this.state = 198; 
	        this._errHandler.sync(this);
	        _la = this._input.LA(1);
	        do {
	            this.state = 197;
	            this.line();
	            this.state = 200; 
	            this._errHandler.sync(this);
	            _la = this._input.LA(1);
	        } while((((_la) & ~0x1f) == 0 && ((1 << _la) & ((1 << AntlrParser.NUM) | (1 << AntlrParser.IDENT) | (1 << AntlrParser.VAR) | (1 << AntlrParser.LPAREN) | (1 << AntlrParser.FOR) | (1 << AntlrParser.WHILE) | (1 << AntlrParser.IF) | (1 << AntlrParser.FUNCTION))) !== 0));
	        this.state = 202;
	        this.match(AntlrParser.RCURLY);
	        this.state = 204;
	        this._errHandler.sync(this);
	        _la = this._input.LA(1);
	        if(_la===AntlrParser.ELSE) {
	            this.state = 203;
	            this.else_condition();
	        }

	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	else_condition() {
	    let localctx = new Else_conditionContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 40, AntlrParser.RULE_else_condition);
	    var _la = 0; // Token type
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 206;
	        this.match(AntlrParser.ELSE);
	        this.state = 207;
	        this.match(AntlrParser.LCURLY);
	        this.state = 209; 
	        this._errHandler.sync(this);
	        _la = this._input.LA(1);
	        do {
	            this.state = 208;
	            this.line();
	            this.state = 211; 
	            this._errHandler.sync(this);
	            _la = this._input.LA(1);
	        } while((((_la) & ~0x1f) == 0 && ((1 << _la) & ((1 << AntlrParser.NUM) | (1 << AntlrParser.IDENT) | (1 << AntlrParser.VAR) | (1 << AntlrParser.LPAREN) | (1 << AntlrParser.FOR) | (1 << AntlrParser.WHILE) | (1 << AntlrParser.IF) | (1 << AntlrParser.FUNCTION))) !== 0));
	        this.state = 213;
	        this.match(AntlrParser.RCURLY);
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	fn() {
	    let localctx = new FnContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 42, AntlrParser.RULE_fn);
	    var _la = 0; // Token type
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 215;
	        this.match(AntlrParser.FUNCTION);
	        this.state = 216;
	        this.match(AntlrParser.IDENT);
	        this.state = 217;
	        this.match(AntlrParser.LPAREN);
	        this.state = 226;
	        this._errHandler.sync(this);
	        _la = this._input.LA(1);
	        if(_la===AntlrParser.IDENT) {
	            this.state = 218;
	            this.match(AntlrParser.IDENT);
	            this.state = 223;
	            this._errHandler.sync(this);
	            _la = this._input.LA(1);
	            while(_la===AntlrParser.COMMA) {
	                this.state = 219;
	                this.match(AntlrParser.COMMA);
	                this.state = 220;
	                this.match(AntlrParser.IDENT);
	                this.state = 225;
	                this._errHandler.sync(this);
	                _la = this._input.LA(1);
	            }
	        }

	        this.state = 228;
	        this.match(AntlrParser.RPAREN);
	        this.state = 232;
	        this._errHandler.sync(this);
	        _la = this._input.LA(1);
	        if(_la===AntlrParser.LPAREN) {
	            this.state = 229;
	            this.match(AntlrParser.LPAREN);
	            this.state = 230;
	            this.match(AntlrParser.VAR);
	            this.state = 231;
	            this.match(AntlrParser.RPAREN);
	        }
